mybril/src/snapshots/mybril__test__dot@call-with-args.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/call-with-args.bril
---
digraph main {
  b0;
}
digraph add2 {
  b0;
}

