mybril/src/snapshots/mybril__test__dot@call-with-args.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/call-with-args.json
---
digraph main {
  b0;
}
digraph add2 {
  b0;
}

