mybril/src/snapshots/mybril__test__dot@call.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/call.bril
---
digraph main {
  b0;
}
digraph print4 {
  b0;
}

