mybril/src/snapshots/mybril__test__dot@call.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/call.json
---
digraph main {
  b0;
}
digraph print4 {
  b0;
}

