mybril/src/snapshots/mybril__test__dot@div.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/div.bril
---
digraph main {
  b0;
}

