mybril/src/snapshots/mybril__test__dot@div.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/div.json
---
digraph main {
  b0;
}

