mybril/src/snapshots/mybril__test__dot@jmp.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/jmp.json
---
digraph main {
  b0;
  b1;
  somewhere;
  b0 -> somewhere;
  b1 -> somewhere;
}

