mybril/src/snapshots/mybril__test__dot@main-args.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/main-args.bril
---
digraph main {
  b0;
}

