mybril/src/snapshots/mybril__test__dot@main-args.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/main-args.json
---
digraph main {
  b0;
}

