mybril/src/snapshots/mybril__test__dot@main-bool-args.bril.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/test/interp/core/main-bool-args.bril
---
digraph main {
  b0;
  here;
  there;
  b0 -> here;
  b0 -> there;
}

