mybril/src/snapshots/mybril__test__dot@main-bool-args.json.snap
---
source: mybril/src/main.rs
expression: dot
input_file: mybril/tests/main-bool-args.json
---
digraph main {
  b0;
  here;
  there;
  b0 -> here;
  b0 -> there;
}

